--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path="yaoqiang/modules"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/apache-ant-1.9.4.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/asaf.module.examples.ws.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/biz.aQute.bnd-2.4.0.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/docking-frames-1.1.2.p16a.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/h2-1.3.176.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/l2fprod-common-9.2.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.apache.felix.bundlerepository-2.0.6.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.apache.felix.log-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.apache.felix.scr-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.yaoqiang.asaf.admin.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.yaoqiang.asaf.build-systems.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.yaoqiang.asaf.core.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.yaoqiang.asaf.editor.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/org.yaoqiang.asaf.jar"/>
+	<classpathentry kind="lib" path="/home/thorsten/workspace/aat/yaoqiang/modules/rsyntaxtextarea-2.5.6.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
