--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>aat</groupId>
+  <scm>
+        <connection>scm:git:https://github.com/TWilmer/aat.git </connection>
+    </scm>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
+        <openpnp.version>${maven.build.timestamp}.${buildNumber}</openpnp.version>
+    </properties>
   <artifactId>aat</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>one.wilmer.aat</name>
@@ -8,14 +16,105 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+    
+            <!-- Creates a build number property that is then embedded into the manifest 
+                by the maven-jar-plugin. -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                    <shortRevisionLength>7</shortRevisionLength>
+                </configuration>
+            </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <mainClass>aat.AspiceAssementTool</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>aat.AspiceAssementTool</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Version>${aat.version}</Implementation-Version>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+                <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>8.29</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <configuration>
+                            <checkstyleRules>
+                                <module name="Checker">
+                                    <module name="TreeWalker">
+                                        <module name="NeedBraces">
+                                        </module>
+                                        <module name="OneStatementPerLine">
+                                        </module>
+                                        <module name="MemberName">
+                                            <property name="format" value="^[a-z][a-zA-Z0-9_]*$" />
+                                        </module>
+                                        <module name="TypeName">
+                                            <property name="format" value="^[A-Z][a-zA-Z0-9_]*$" />
+                                        </module>
+                                        <module name="MethodName">
+                                        </module>
+                                        <module name="LocalVariableName">
+                                            <property name="format" value="^[a-z][a-zA-Z0-9_]*$" />
+                                        </module>
+                                    </module>
+                                </module>
+                            </checkstyleRules>
+                            <encoding>UTF-8</encoding>
+                            <consoleOutput>true</consoleOutput>
+                            <failsOnError>true</failsOnError>
+                            <linkXRef>false</linkXRef>
+                            <!-- Exclude Eagle importer code, which is auto generated -->
+                            <excludes>org/openpnp/model/eagle/xml/*</excludes>
+                        </configuration>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
     </plugins>
    
   </build>
